--- a/rt-thread-master/bsp/stm32f411ce/.config
+++ b/rt-thread-master/bsp/stm32f411ce/.config
@@ -27,9 +27,9 @@ CONFIG_IDLE_THREAD_STACK_SIZE=256
 CONFIG_RT_USING_SEMAPHORE=y
 CONFIG_RT_USING_MUTEX=y
 CONFIG_RT_USING_EVENT=y
-CONFIG_RT_USING_MAILBOX=y
+# CONFIG_RT_USING_MAILBOX is not set
 CONFIG_RT_USING_MESSAGEQUEUE=y
-# CONFIG_RT_USING_SIGNALS is not set
+CONFIG_RT_USING_SIGNALS=y
 
 #
 # Memory Management
@@ -95,14 +95,15 @@ CONFIG_RT_USING_SERIAL=y
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_HWTIMER is not set
 # CONFIG_RT_USING_CPUTIME is not set
-# CONFIG_RT_USING_I2C is not set
+CONFIG_RT_USING_I2C=y
+CONFIG_RT_USING_I2C_BITOPS=y
 CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
 # CONFIG_RT_USING_SPI is not set
-# CONFIG_RT_USING_WDT is not set
+CONFIG_RT_USING_WDT=y
 # CONFIG_RT_USING_WIFI is not set
 
 #
@@ -110,6 +111,10 @@ CONFIG_RT_USING_PIN=y
 #
 # CONFIG_RT_USING_USB_HOST is not set
 # CONFIG_RT_USING_USB_DEVICE is not set
+# CONFIG__RT_USB_DEVICE_CDC is not set
+# CONFIG__RT_USB_DEVICE_MSTORAGE is not set
+# CONFIG__RT_USB_DEVICE_HID is not set
+# CONFIG__RT_USB_DEVICE_WINUSB is not set
 
 #
 # POSIX layer and C standard library
@@ -140,7 +145,15 @@ CONFIG_RT_USING_PIN=y
 #
 # Utilities
 #
-# CONFIG_RT_USING_LOGTRACE is not set
+CONFIG_RT_USING_LOGTRACE=y
+CONFIG_LOG_TRACE_MAX_SESSION=16
+# CONFIG_LOG_TRACE_USING_LEVEL_NOTRACE is not set
+# CONFIG_LOG_TRACE_USING_LEVEL_ERROR is not set
+# CONFIG_LOG_TRACE_USING_LEVEL_WARNING is not set
+CONFIG_LOG_TRACE_USING_LEVEL_INFO=y
+# CONFIG_LOG_TRACE_USING_LEVEL_VERBOSE is not set
+# CONFIG_LOG_TRACE_USING_LEVEL_DEBUG is not set
+# CONFIG_LOG_TRACE_USING_MEMLOG is not set
 # CONFIG_RT_USING_RYM is not set
 
 #
